--- a/main.html
+++ b/main.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+<div class="holder">
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
